# chaba

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
agent/: README.md
cli/: README.md
config/: README.md  chaba.example.yaml
core/: README.md
docs/: README.md  localization.md
docs/en/: architecture.md  getting-started.md
docs/ja/: architecture.md  getting-started.md
npm/: .npmignore  README.md  package.json
npm/scripts/: install.js
proptest-regressions/core/: worktree.txt
src/: config.rs  error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/commands/: agent_result.rs  cleanup.rs  config.rs  list.rs  merge.rs  mod.rs  rebase.rs  review.rs  status.rs  tui.rs
src/core/: agent.rs  command.rs  env.rs  git.rs  hooks.rs  installer.rs  mod.rs  port.rs  project.rs  review_analysis.rs  sandbox.rs  session.rs  state.rs  worktree.rs
tests/: cli_test.rs  config_test.rs  e2e_test.rs  git_ops_test.rs
