[package]
name = "chaba"
version = "0.1.0"
edition = "2021"
authors = ["Kei Sekine Dev <204158401+Nenene01@users.noreply.github.com>"]
description = "AI Agent Friendly Source Review & Debug Environment - Integrates git worktree, branch operations, and sandbox environments"
repository = "https://github.com/Nenene01/chaba"
license = "MIT"
keywords = ["git", "worktree", "code-review", "ai-agent", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "chaba"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "color", "suggestions"] }

# Git operations
git2 = "0.19"

# Configuration
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# Error handling
anyhow = "1"
thiserror = "1"

# Async runtime
tokio = { version = "1", features = ["fs", "process", "rt-multi-thread", "macros"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
